--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-\        <activity
+        <activity
             android:name="com.skjline.caddie.core.activity.ScoreActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
